--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="author" content="Lorenzo de Lijser"/>
+  <meta name="author" content="Lorenzo de Lijser" />
   <meta name="description" content="Digital design porfolio website of Lorenzo de Lijser">
-  <meta name="keywords" content="Digital Design, Portfolio, Lorenzo de Lijser, portfolio, avans, cmd, communication & multimedia design">
+  <meta name="keywords"
+    content="Digital Design, Portfolio, Lorenzo de Lijser, portfolio, avans, cmd, communication & multimedia design">
 
   <title>Lorenzo de Lijser | Portfolio</title>
 
@@ -39,7 +41,8 @@
 
   <header>
     <h1>Lorenzo de Lijser</h1>
-    <p>I'm a creative problem solver with a passion for <a href="#web">coding</a> and a fascination for <a href="#research">psychology</a>.</p>
+    <p>I'm a creative problem solver with a passion for <a href="#web">coding</a> and a fascination for <a
+        href="#research">psychology</a>.</p>
     <p>Currently studying Communication and Multimedia Design in Breda. <a href="#about-me">Learn more about me</a>.</p>
   </header>
 
@@ -94,9 +97,13 @@
     <h2>About Lorenzo</h2>
     <div class="about-me-align">
       <div class="about-me-txt">
-        <p>I’m Lorenzo de Lijser, a Communication and Multimedia Design student from Breda. I love to solve creative problems.</p>
-        <p>I love to do research and visualize meaningful insights. I’m eager to learn new things and experiment with new technologies. I would like to gain more experience in web-development to bring designs and concepts to life.</p>
-        <p>In my free time, I like to manipulate sound-waves, twist a lot of knobs on soft-synths and create unique sounds.</p>
+        <p>I’m Lorenzo de Lijser, a Communication and Multimedia Design student from Breda. I love to solve creative
+          problems.</p>
+        <p>I love to do research and visualize meaningful insights. I’m eager to learn new things and experiment with
+          new technologies. I would like to gain more experience in web-development to bring designs and concepts to
+          life.</p>
+        <p>In my free time, I like to manipulate sound-waves, twist a lot of knobs on soft-synths and create unique
+          sounds.</p>
       </div>
       <div class="about-me-img">
       </div>
@@ -107,8 +114,11 @@
     <a href="https://www.linkedin.com/in/lorenzo-de-lijser/" target="_top">
       <img src="img/icon-linkedin.svg" alt="Linkedin logo ">
     </a>
-    <p>Thank you <i>very much</i> for checking out my portfolio.<br/> If you're interested feel free to <a href="mailto:lorenzodelijser@gmail.com?Subject=Hello" class="mail-me">mail me</a> at lorenzodelijser@gmail.com</p>
+    <p>Thank you <i>very much</i> for checking out my portfolio.<br /> If you're interested feel free to <a
+        href="mailto:lorenzodelijser@gmail.com?Subject=Hello" class="mail-me">mail me</a> at lorenzodelijser@gmail.com
+    </p>
   </footer>
 
 </body>
+
 </html>
