--- a/projects/research-shame/index.html
+++ b/projects/research-shame/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="author" content="Lorenzo de Lijser"/>
+  <meta name="author" content="Lorenzo de Lijser" />
   <meta name="description" content="Digital design porfolio website of Lorenzo de Lijser">
-  <meta name="keywords" content="Digital Design, Portfolio, Lorenzo de Lijser, Research, Research on shame, Human-centered design">
+  <meta name="keywords"
+    content="Digital Design, Portfolio, Lorenzo de Lijser, Research, Research on shame, Human-centered design">
 
   <title>Lorenzo de Lijser | Research on Shame</title>
 
@@ -16,24 +18,25 @@
   <link rel="me" href="https://www.linkedin.com/in/lorenzo-de-lijser/" type="text/html">
   <link rel="me" href="mailto:lorenzodelijser@gmail.com">
 
-  <link rel="shortcut icon" type="image/png" href="../../img/favicon/apple-touch-icon.png"/>
+  <link rel="shortcut icon" type="image/png" href="../../img/favicon/apple-touch-icon.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="../../img/favicon/apple-touch-icon.png">
-	<link rel="icon" type="image/png" href="../../img/favicon/favicon-32x32.png" sizes="32x32">
-	<link rel="icon" type="image/png" href="../../img/favicon/favicon-16x16.png" sizes="16x16">
+  <link rel="icon" type="image/png" href="../../img/favicon/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="../../img/favicon/favicon-16x16.png" sizes="16x16">
   <meta name="theme-color" content="#FFFFFF">
 
-	<meta property="og:title" content="Lorenzo de Lijser | Portfolio">
+  <meta property="og:title" content="Lorenzo de Lijser | Portfolio">
   <meta property="og:description" content="Digital design porfolio website of Lorenzo de Lijser">
   <meta property="og:image" content="../../img/meta/social_share_1200x630.jpg">
   <meta property="og:url" content="https://www.lorenzodelijser.nl/">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Lorenzo de Lijser | Portfolio">
 
-	<meta name="twitter:card" content="summary">
-	<meta name="twitter:title" content="Lorenzo de Lijser | Portfolio">
-	<meta name="twitter:description" content="Digital design porfolio website of Lorenzo de Lijser">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Lorenzo de Lijser | Portfolio">
+  <meta name="twitter:description" content="Digital design porfolio website of Lorenzo de Lijser">
   <meta name="twitter:image:src" content="../../img/meta/social_share_144x144.jpg">
 </head>
+
 <body>
 
   <div class="menu-bar">
@@ -46,30 +49,38 @@
     <p class="role"><strong>Role</strong> Human-Centered Designer</p>
     <p class="task"><strong>Task</strong> Visualize Meaningful Insights on Behavior</p>
     <p class="tool"><strong>Tools</strong> Observing, Interviewing, Empathy mapping & Sticky Notes</p>
-    <p class="team"><strong>Team</strong> <a href="https://www.frankroodnat.nl/" target="_blank">Frank Roodnat</a> & <a href="https://www.lorenzodelijser.nl/#about-me">Lorenzo de Lijser</a></p>
+    <p class="team"><strong>Team</strong> <a href="https://www.frankroodnat.nl/" target="_blank">Frank Roodnat</a> & <a
+        href="https://www.lorenzodelijser.nl/#about-me">Lorenzo de Lijser</a></p>
   </header>
 
   <div class="project-background">
     <div class="project-wrapper-text">
       <h2>Assignment</h2>
-      <p>This research project was assigned by the academy in, the division: <i>Human</i>. We were assigned to gather qualitative insights on a certain behavior of people by observing and interviewing them. The obtained meaningful insights needed to be visualized on a poster.</p>
-    
+      <p>This research project was assigned by the academy in, the division: <i>Human</i>. We were assigned to gather
+        qualitative insights on a certain behavior of people by observing and interviewing them. The obtained meaningful
+        insights needed to be visualized on a poster.</p>
+
       <figure>
         <img src="../../img/research-shame/01.png" alt="Research on Shame - First Experimental Sketch">
         <figcaption>First Experimental Sketch.</figcaption>
       </figure>
 
-      <p>We were interested in observing and researching <i>shame</i>. Why people are ashamed and why people act differently under certain circumstances.</p>
+      <p>We were interested in observing and researching <i>shame</i>. Why people are ashamed and why people act
+        differently under certain circumstances.</p>
 
       <h2>Process</h2>
-      <p>Firstly information was gathered by observation. Trying to read peculiar behavior in the center of Breda. After observing people we tried to gather meaningful insights by interviewing. We collected all the data and <i>analyzed</i> them by using theory we received from our academy.</p>
+      <p>Firstly information was gathered by observation. Trying to read peculiar behavior in the center of Breda. After
+        observing people we tried to gather meaningful insights by interviewing. We collected all the data and
+        <i>analyzed</i> them by using theory we received from our academy.</p>
 
       <figure>
         <img src="../../img/research-shame/02.png" alt="Research on Shame - Working with Sticky Notes">
         <figcaption>Working with Sticky Notes.</figcaption>
       </figure>
 
-      <p>By making sketches, we tried to <i>rearrange</i> the information in other forms. By going through this process, we tried to discover the purpose of shame and where it came from. The next step was to gather all the sketches and make one final poster out of it.</p>
+      <p>By making sketches, we tried to <i>rearrange</i> the information in other forms. By going through this process,
+        we tried to discover the purpose of shame and where it came from. The next step was to gather all the sketches
+        and make one final poster out of it.</p>
 
       <h2>Results</h2>
       <p>Underneath you can see the final product.</p>
@@ -97,8 +108,11 @@
     <a href="https://www.linkedin.com/in/lorenzo-de-lijser/" target="_top">
       <img src="../../img/icon-linkedin.svg" alt="Linkedin Logo">
     </a>
-    <p>Thank you <i>very much</i> for checking out my portfolio.<br/> If you're interested feel free to <a href="mailto:lorenzodelijser@gmail.com?Subject=Hello" class="mail-me">mail me</a> at lorenzodelijser@gmail.com</p>
+    <p>Thank you <i>very much</i> for checking out my portfolio.<br /> If you're interested feel free to <a
+        href="mailto:lorenzodelijser@gmail.com?Subject=Hello" class="mail-me">mail me</a> at lorenzodelijser@gmail.com
+    </p>
   </footer>
 
 </body>
+
 </html>
