--- a/projects/research-stress/index.html
+++ b/projects/research-stress/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="author" content="Lorenzo de Lijser"/>
+  <meta name="author" content="Lorenzo de Lijser" />
   <meta name="description" content="Digital design porfolio website of Lorenzo de Lijser">
-  <meta name="keywords" content="Digital Design, Portfolio, Lorenzo de Lijser, Research, Research on stress, Human-centered design">
+  <meta name="keywords"
+    content="Digital Design, Portfolio, Lorenzo de Lijser, Research, Research on stress, Human-centered design">
 
   <title>Lorenzo de Lijser | Research on Stress</title>
 
@@ -16,24 +18,25 @@
   <link rel="me" href="https://www.linkedin.com/in/lorenzo-de-lijser/" type="text/html">
   <link rel="me" href="mailto:lorenzodelijser@gmail.com">
 
-  <link rel="shortcut icon" type="image/png" href="../../img/favicon/apple-touch-icon.png"/>
+  <link rel="shortcut icon" type="image/png" href="../../img/favicon/apple-touch-icon.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="../../img/favicon/apple-touch-icon.png">
-	<link rel="icon" type="image/png" href="../../img/favicon/favicon-32x32.png" sizes="32x32">
-	<link rel="icon" type="image/png" href="../../img/favicon/favicon-16x16.png" sizes="16x16">
+  <link rel="icon" type="image/png" href="../../img/favicon/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="../../img/favicon/favicon-16x16.png" sizes="16x16">
   <meta name="theme-color" content="#FFFFFF">
 
-	<meta property="og:title" content="Lorenzo de Lijser | Portfolio">
+  <meta property="og:title" content="Lorenzo de Lijser | Portfolio">
   <meta property="og:description" content="Digital design porfolio website of Lorenzo de Lijser">
   <meta property="og:image" content="../../img/meta/social_share_1200x630.jpg">
   <meta property="og:url" content="https://www.lorenzodelijser.nl/">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Lorenzo de Lijser | Portfolio">
 
-	<meta name="twitter:card" content="summary">
-	<meta name="twitter:title" content="Lorenzo de Lijser | Portfolio">
-	<meta name="twitter:description" content="Digital design porfolio website of Lorenzo de Lijser">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Lorenzo de Lijser | Portfolio">
+  <meta name="twitter:description" content="Digital design porfolio website of Lorenzo de Lijser">
   <meta name="twitter:image:src" content="../../img/meta/social_share_144x144.jpg">
 </head>
+
 <body>
 
   <div class="menu-bar">
@@ -45,34 +48,48 @@
     <h1>Research on Stress</h1>
     <p class="role"><strong>Role</strong> Human-Centered Designer</p>
     <p class="task"><strong>Task</strong> Gain Deeper Insights on Stress amongst High School Students</p>
-    <p class="tool"><strong>Tools</strong> Context Mapping, Interviewing, Observation, Cultural Probes & a lot of Sticky Notes</p>
+    <p class="tool"><strong>Tools</strong> Context Mapping, Interviewing, Observation, Cultural Probes & a lot of Sticky
+      Notes</p>
     <p class="team"><strong>Team</strong> of Five People</p>
   </header>
 
   <div class="project-background">
     <div class="project-wrapper-text">
       <h2>Assignment</h2>
-      <p>This research project was assigned by the academy, in the division: <i>Human</i>. We were assigned to design a <i>cultural probe</i> to gain deeper insight into stress amongst high school students. A cultural probe is a participatory user self-documentation, containing various objects that are particularly designed to document the current situation of a research group.</p>
+      <p>This research project was assigned by the academy, in the division: <i>Human</i>. We were assigned to design a
+        <i>cultural probe</i> to gain deeper insight into stress amongst high school students. A cultural probe is a
+        participatory user self-documentation, containing various objects that are particularly designed to document the
+        current situation of a research group.</p>
 
       <figure>
         <img src="../../img/research-stress/01.png" alt="Research on Stress - Our Cultural Probe">
         <figcaption>Our Cultural Probe.</figcaption>
       </figure>
 
-      <p>The work of psychologist <i>Mihaly Csikszentmihalyi</i> inspired us at the start of the project. A lot of the information collected by interviewing the youngsters suited perfectly in the <i>Flow: The Psychology of Optimal Experience</i> by <i>Csikszentmihalyi</i>.</p>
+      <p>The work of psychologist <i>Mihaly Csikszentmihalyi</i> inspired us at the start of the project. A lot of the
+        information collected by interviewing the youngsters suited perfectly in the <i>Flow: The Psychology of Optimal
+          Experience</i> by <i>Csikszentmihalyi</i>.</p>
 
       <h2>Process</h2>
-      <p>After obtaining information by interviewing the high school students, we were up to design a cultural probe to gain even deeper insights into the stress that lives amongst these students. By using the <i>Self-Determination Theory</i> by <i>Edward L. Deci</i> and <i>Richard Ryan</i>, we had a better understanding of behavior. This information helped us to envision a frame to design parts for the cultural probe.</p>
-      
+      <p>After obtaining information by interviewing the high school students, we were up to design a cultural probe to
+        gain even deeper insights into the stress that lives amongst these students. By using the <i>Self-Determination
+          Theory</i> by <i>Edward L. Deci</i> and <i>Richard Ryan</i>, we had a better understanding of behavior. This
+        information helped us to envision a frame to design parts for the cultural probe.</p>
+
       <figure>
         <img src="../../img/research-stress/02.png" alt="Research on Stress - Sticky Notes on a Emphaty Map">
         <figcaption>Sticky Notes on a Emphaty Map.</figcaption>
       </figure>
 
-      <p>After designing and developing all the parts for the cultural probe, we were able to distribute it amongst our research group. The cultural probe contained short daily exercises to gain essential insights into the behavior of the high school students.</p>
+      <p>After designing and developing all the parts for the cultural probe, we were able to distribute it amongst our
+        research group. The cultural probe contained short daily exercises to gain essential insights into the behavior
+        of the high school students.</p>
 
       <h2>Results</h2>
-      <p>We gathered all the results obtained from the exercises and ordered all of them. <i>Patterns</i> in the data provided insights into the behavior of the students. The most fascinating data we obtained, got <i>re-visualized</i> and presented. Some of the visualizations remained a degree of abstraction to be more inviting for interpretation.</p>
+      <p>We gathered all the results obtained from the exercises and ordered all of them. <i>Patterns</i> in the data
+        provided insights into the behavior of the students. The most fascinating data we obtained, got
+        <i>re-visualized</i> and presented. Some of the visualizations remained a degree of abstraction to be more
+        inviting for interpretation.</p>
 
       <figure>
         <img src="../../img/research-stress/03.png" alt="Research on Stress - Presentatino of our Insights">
@@ -90,8 +107,11 @@
     <a href="https://www.linkedin.com/in/lorenzo-de-lijser/" target="_top">
       <img src="../../img/icon-linkedin.svg" alt="Linkedin logo ">
     </a>
-    <p>Thank you <i>very much</i> for checking out my portfolio.<br/> If you're interested feel free to <a href="mailto:lorenzodelijser@gmail.com?Subject=Hello" class="mail-me">mail me</a> at lorenzodelijser@gmail.com</p>
+    <p>Thank you <i>very much</i> for checking out my portfolio.<br /> If you're interested feel free to <a
+        href="mailto:lorenzodelijser@gmail.com?Subject=Hello" class="mail-me">mail me</a> at lorenzodelijser@gmail.com
+    </p>
   </footer>
 
 </body>
+
 </html>
