Minified CSS and Cleaned Up Docs.

--- a/index.html
+++ b/index.html
@@ -5,28 +5,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="author" content="Lorenzo de Lijser" />
+  <meta name="author" content="Lorenzo de Lijser">
   <meta name="description" content="Digital design porfolio website of Lorenzo de Lijser">
   <meta name="keywords"
     content="Digital Design, Portfolio, Lorenzo de Lijser, portfolio, avans, cmd, communication & multimedia design">
 
   <title>Lorenzo de Lijser | Portfolio</title>
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="./css/normalize.min.css">
+  <link rel="stylesheet" href="./css/style.min.css">
 
   <link rel="me" href="https://www.linkedin.com/in/lorenzo-de-lijser/" type="text/html">
   <link rel="me" href="lorenzodelijser@gmail.com">
 
-  <link rel="shortcut icon" type="image/png" href="img/favicon/apple-touch-icon.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" href="img/favicon/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="img/favicon/favicon-16x16.png" sizes="16x16">
+  <link rel="shortcut icon" type="image/png" href="./img/favicon/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" href="./img/favicon/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="./img/favicon/favicon-16x16.png" sizes="16x16">
   <meta name="theme-color" content="#FFFFFF">
 
   <meta property="og:title" content="Lorenzo de Lijser | Portfolio">
   <meta property="og:description" content="Digital design porfolio website of Lorenzo de Lijser">
-  <meta property="og:image" content="img/meta/social_share_1200x630.jpg">
+  <meta property="og:image" content="./img/meta/social_share_1200x630.jpg">
   <meta property="og:url" content="https://www.lorenzodelijser.nl/">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Lorenzo de Lijser | Portfolio">
@@ -34,7 +34,7 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Lorenzo de Lijser | Portfolio">
   <meta name="twitter:description" content="Digital design porfolio website of Lorenzo de Lijser">
-  <meta name="twitter:image:src" content="img/meta/social_share_144x144.jpg">
+  <meta name="twitter:image:src" content="./img/meta/social_share_144x144.jpg">
 </head>
 
 <body>
