--- a/projects/foodloose/index.html
+++ b/projects/foodloose/index.html
@@ -5,21 +5,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="author" content="Lorenzo de Lijser" />
+  <meta name="author" content="Lorenzo de Lijser">
   <meta name="description" content="Digital design porfolio website of Lorenzo de Lijser">
   <meta name="keywords"
     content="Digital Design, Portfolio, Lorenzo de Lijser, Front-end Development, HTML, CSS, JavaScript, Foodloose">
 
   <title>Lorenzo de Lijser | Foodloose</title>
 
-  <link rel="stylesheet" href="../../css/normalize.css">
-  <link rel="stylesheet" href="../../css/style.css">
-  <link rel="stylesheet" href="../../css/prototype01.css">
+  <link rel="stylesheet" href="../../css/normalize.min.css">
+  <link rel="stylesheet" href="../../css/style.min.css">
 
   <link rel="me" href="https://www.linkedin.com/in/lorenzo-de-lijser/" type="text/html">
   <link rel="me" href="mailto:lorenzodelijser@gmail.com">
 
-  <link rel="shortcut icon" type="image/png" href="../../img/favicon/apple-touch-icon.png" />
+  <link rel="shortcut icon" type="image/png" href="../../img/favicon/apple-touch-icon.png">
   <link rel="apple-touch-icon" sizes="180x180" href="../../img/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" href="../../img/favicon/favicon-32x32.png" sizes="32x32">
   <link rel="icon" type="image/png" href="../../img/favicon/favicon-16x16.png" sizes="16x16">
