Changed Theme to Black, Added Webmanifest and robots.txt

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" href="./img/favicon/favicon-32x32.png" sizes="32x32">
   <link rel="icon" type="image/png" href="./img/favicon/favicon-16x16.png" sizes="16x16">
-  <meta name="theme-color" content="#FFFFFF">
+  <meta name="theme-color" content="#000000">
 
   <meta property="og:title" content="Lorenzo de Lijser | Portfolio">
   <meta property="og:description" content="Digital design porfolio website of Lorenzo de Lijser">
