--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+  <title>Lorenzo de Lijser | Portfolio</title>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -10,22 +12,27 @@
   <meta name="keywords"
     content="Digital Design, Portfolio, Lorenzo de Lijser, portfolio, avans, cmd, communication & multimedia design">
 
-  <title>Lorenzo de Lijser | Portfolio</title>
-
   <link rel="stylesheet" href="./css/style.min.css">
 
   <link rel="me" href="https://www.linkedin.com/in/lorenzo-de-lijser/" type="text/html">
   <link rel="me" href="lorenzodelijser@gmail.com">
 
-  <link rel="shortcut icon" type="image/png" href="./img/favicon/apple-touch-icon.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" href="./img/favicon/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="./img/favicon/favicon-16x16.png" sizes="16x16">
+  <meta name="apple-touch-fullscreen" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-title" content="Portfolio Lorenzo de Lijser">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <link rel="apple-touch-icon" href="./img/icon-192.png">
+  <link rel="apple-touch-startup-image" href="./img/launch.png">
+  <link rel="manifest" href="./manifest.webmanifest">
+
+  <link rel="icon" type="image/png" href="./img/icon-16.png" sizes="16x16">
+  <link rel="icon" type="image/png" href="./img/icon-32.png" sizes="32x32">
+
   <meta name="theme-color" content="#000000">
 
   <meta property="og:title" content="Lorenzo de Lijser | Portfolio">
   <meta property="og:description" content="Digital design porfolio website of Lorenzo de Lijser">
-  <meta property="og:image" content="./img/meta/social_share_1200x630.jpg">
+  <meta property="og:image" content="./img/social_share_1200x630.png">
   <meta property="og:url" content="https://www.lorenzodelijser.nl/">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Lorenzo de Lijser | Portfolio">
@@ -33,7 +40,7 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Lorenzo de Lijser | Portfolio">
   <meta name="twitter:description" content="Digital design porfolio website of Lorenzo de Lijser">
-  <meta name="twitter:image:src" content="./img/meta/social_share_144x144.jpg">
+  <meta name="twitter:image:src" content="./img/icon-144.png">
 </head>
 
 <body>
@@ -50,16 +57,16 @@
     <p>Front-end web development projects made by using HTML, CSS and JavaScript.</p>
     <div class="row-wrapper">
 
-      <a href="/projects/foodloose" class="foodloose">
+      <a href="./projects/foodloose" class="foodloose">
         <h3>Foodloose</h3>
         <p>A webdevelopment project build by combining multiple databasses.</p>
-        <img src="img/mockups/mockup-foodloose.png" id="flying-mockup-1" alt="Mockup Foodloose" />
+        <img src="./img/mockups/mockup-foodloose.png" id="flying-mockup-1" alt="Mockup Foodloose" />
       </a>
 
-      <a href="/projects/tuneback" class="tuneback">
+      <a href="./projects/tuneback" class="tuneback">
         <h3>Tuneback</h3>
         <p>A responsive webdevelopment project for giving and getting feedback.</p>
-        <img src="img/mockups/mockup-tuneback.png" id="flying-mockup-2" alt="Mockup Tuneback" />
+        <img src="./img/mockups/mockup-tuneback.png" id="flying-mockup-2" alt="Mockup Tuneback" />
       </a>
 
     </div>
@@ -68,12 +75,12 @@
     <p>Research projects focussed on getting qualitative insights of human behavior.</p>
     <div class="row-wrapper">
 
-      <a href="/projects/research-stress" class="stress">
+      <a href="./projects/research-stress" class="stress">
         <h3>Research on Stress</h3>
         <p>A research project on stress among young adults by designing cultural probes.</p>
       </a>
 
-      <a href="/projects/research-shame" class="emphatic">
+      <a href="./projects/research-shame" class="emphatic">
         <h3>Research on Shame</h3>
         <p>A research project on behavoir visualized to get qualitative insights.</p>
       </a>
@@ -84,7 +91,7 @@
     <p>A project that reflects on the relation between humans and technology.</p>
     <div class="row-wrapper">
 
-      <a href="/projects/shadow-democracy" class="democracy">
+      <a href="./projects/shadow-democracy" class="democracy">
         <h3>Shadow Democracy</h3>
         <p>This project adresses today's conflict about how companies are influencing society using big data.</p>
       </a>
@@ -111,7 +118,7 @@
 
   <footer>
     <a href="https://www.linkedin.com/in/lorenzo-de-lijser/" target="_top">
-      <img src="img/icon-linkedin.svg" alt="Linkedin logo ">
+      <img src="./img/icon-linkedin.svg" alt="Linkedin logo">
     </a>
     <p>Thank you <i>very much</i> for checking out my portfolio.<br /> If you're interested feel free to <a
         href="mailto:lorenzodelijser@gmail.com?Subject=Hello" class="mail-me">mail me</a> at lorenzodelijser@gmail.com
