--- a/projects/research-shame/index.html
+++ b/projects/research-shame/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+  <title>Lorenzo de Lijser | Research on Shame</title>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -10,22 +12,27 @@
   <meta name="keywords"
     content="Digital Design, Portfolio, Lorenzo de Lijser, Research, Research on shame, Human-centered design">
 
-  <title>Lorenzo de Lijser | Research on Shame</title>
-
   <link rel="stylesheet" href="../../css/style.min.css">
 
   <link rel="me" href="https://www.linkedin.com/in/lorenzo-de-lijser/" type="text/html">
   <link rel="me" href="mailto:lorenzodelijser@gmail.com">
 
-  <link rel="shortcut icon" type="image/png" href="../../img/favicon/apple-touch-icon.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="../../img/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" href="../../img/favicon/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="../../img/favicon/favicon-16x16.png" sizes="16x16">
+  <meta name="apple-touch-fullscreen" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-title" content="Portfolio Lorenzo de Lijser">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <link rel="apple-touch-icon" href="../../img/icon-192.png">
+  <link rel="apple-touch-startup-image" href="../../img/launch.png">
+  <link rel="manifest" href="../../manifest.webmanifest">
+
+  <link rel="icon" type="image/png" href="../../img/icon-16.png" sizes="16x16">
+  <link rel="icon" type="image/png" href="../../img/icon-32.png" sizes="32x32">
+
   <meta name="theme-color" content="#000000">
 
   <meta property="og:title" content="Lorenzo de Lijser | Portfolio">
   <meta property="og:description" content="Digital design porfolio website of Lorenzo de Lijser">
-  <meta property="og:image" content="../../img/meta/social_share_1200x630.jpg">
+  <meta property="og:image" content="../../img/social_share_1200x630.png">
   <meta property="og:url" content="https://www.lorenzodelijser.nl/">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Lorenzo de Lijser | Portfolio">
@@ -33,7 +40,7 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Lorenzo de Lijser | Portfolio">
   <meta name="twitter:description" content="Digital design porfolio website of Lorenzo de Lijser">
-  <meta name="twitter:image:src" content="../../img/meta/social_share_144x144.jpg">
+  <meta name="twitter:image:src" content="../../img/icon-144.png">
 </head>
 
 <body>
