--- a/index.html
+++ b/index.html
@@ -125,6 +125,16 @@
     </p>
   </footer>
 
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker
+        .register('/sw.js')
+        .then(function () {
+          console.log("Service Worker Registered");
+        });
+    }
+  </script>
+
 </body>
 
 </html>
