--- a/projects/research-stress/index.html
+++ b/projects/research-stress/index.html
@@ -46,17 +46,57 @@
 <body>
 
   <div class="menu-bar">
-    <a href="../../index.html#web">Overview</a>
-    <a href="../../index.html#about-me">About Lorenzo</a>
+    <a href="../../#web">Overview</a>
+    <a href="../../#about-me">About Lorenzo</a>
   </div>
 
   <header class="project stress">
     <h1>Research on Stress</h1>
-    <p class="role"><strong>Role</strong> Human-Centered Designer</p>
-    <p class="task"><strong>Task</strong> Gain Deeper Insights on Stress amongst High School Students</p>
-    <p class="tool"><strong>Tools</strong> Context Mapping, Interviewing, Observation, Cultural Probes & a lot of Sticky
-      Notes</p>
-    <p class="team"><strong>Team</strong> of Five People</p>
+    <p>
+      <strong>
+        <svg height="12px" viewBox="0 0 512 512">
+          <path fill="currentColor"
+            d="M256 288c79.5 0 144-64.5 144-144S335.5 0 256 0 112 64.5 112 144s64.5 144 144 144zm128 32h-55.1c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16H128C57.3 320 0 377.3 0 448v16c0 26.5 21.5 48 48 48h416c26.5 0 48-21.5 48-48v-16c0-70.7-57.3-128-128-128z">
+          </path>
+        </svg>
+        Role:
+      </strong>
+      Human-Centered Designer
+    </p>
+    <p>
+      <strong>
+        <svg height="12px" viewBox="0 0 384 512">
+          <path fill="currentColor"
+            d="M298.028 214.267L285.793 96H328c13.255 0 24-10.745 24-24V24c0-13.255-10.745-24-24-24H56C42.745 0 32 10.745 32 24v48c0 13.255 10.745 24 24 24h42.207L85.972 214.267C37.465 236.82 0 277.261 0 328c0 13.255 10.745 24 24 24h136v104.007c0 1.242.289 2.467.845 3.578l24 48c2.941 5.882 11.364 5.893 14.311 0l24-48a8.008 8.008 0 0 0 .845-3.578V352h136c13.255 0 24-10.745 24-24-.001-51.183-37.983-91.42-85.973-113.733z">
+          </path>
+        </svg>
+        Task:
+      </strong>
+      Gain Deeper Insights on Stress amongst High School Students
+    </p>
+    <p>
+      <strong>
+        <svg height="12px" viewBox="0 0 512 512">
+          <path fill="currentColor"
+            d="M502.63 214.63l-45.25-45.25c-6-6-14.14-9.37-22.63-9.37H384V80c0-26.51-21.49-48-48-48H176c-26.51 0-48 21.49-48 48v80H77.25c-8.49 0-16.62 3.37-22.63 9.37L9.37 214.63c-6 6-9.37 14.14-9.37 22.63V320h128v-16c0-8.84 7.16-16 16-16h32c8.84 0 16 7.16 16 16v16h128v-16c0-8.84 7.16-16 16-16h32c8.84 0 16 7.16 16 16v16h128v-82.75c0-8.48-3.37-16.62-9.37-22.62zM320 160H192V96h128v64zm64 208c0 8.84-7.16 16-16 16h-32c-8.84 0-16-7.16-16-16v-16H192v16c0 8.84-7.16 16-16 16h-32c-8.84 0-16-7.16-16-16v-16H0v96c0 17.67 14.33 32 32 32h448c17.67 0 32-14.33 32-32v-96H384v16z">
+          </path>
+        </svg>
+        Tools:
+      </strong>
+      Context Mapping, Interviewing, Observation, Cultural Probes & a lot of Sticky
+      Notes
+    </p>
+    <p>
+      <strong>
+        <svg height="12px" viewBox="0 0 640 512">
+          <path fill="currentColor"
+            d="M192 256c61.9 0 112-50.1 112-112S253.9 32 192 32 80 82.1 80 144s50.1 112 112 112zm76.8 32h-8.3c-20.8 10-43.9 16-68.5 16s-47.6-6-68.5-16h-8.3C51.6 288 0 339.6 0 403.2V432c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48v-28.8c0-63.6-51.6-115.2-115.2-115.2zM480 256c53 0 96-43 96-96s-43-96-96-96-96 43-96 96 43 96 96 96zm48 32h-3.8c-13.9 4.8-28.6 8-44.2 8s-30.3-3.2-44.2-8H432c-20.4 0-39.2 5.9-55.7 15.4 24.4 26.3 39.7 61.2 39.7 99.8v38.4c0 2.2-.5 4.3-.6 6.4H592c26.5 0 48-21.5 48-48 0-61.9-50.1-112-112-112z">
+          </path>
+        </svg>
+        Team:
+      </strong>
+      of Five People
+    </p>
   </header>
 
   <div class="project-background">
@@ -103,8 +143,8 @@
       </figure>
 
       <div class="buttons">
-        <a href="../../index.html#web" class="icon-overview">Overview</a>
-        <a href="../research-shame" class="icon-next">Next project</a>
+        <a href="../../#web">Overview</a>
+        <a href="../research-shame">Next project</a>
       </div>
     </div>
   </div>
