--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="keywords"
     content="Digital Design, Portfolio, Lorenzo de Lijser, portfolio, avans, cmd, communication & multimedia design">
 
-  <link rel="stylesheet" href="./css/style.min.css">
+  <link rel="stylesheet" href="./css/style.css">
 
   <link rel="me" href="https://www.linkedin.com/in/lorenzo-de-lijser/" type="text/html">
   <link rel="me" href="lorenzodelijser@gmail.com">
