--- a/projects/foodloose/index.html
+++ b/projects/foodloose/index.html
@@ -12,7 +12,7 @@
   <meta name="keywords"
     content="Digital Design, Portfolio, Lorenzo de Lijser, Front-end Development, HTML, CSS, JavaScript, Foodloose">
 
-  <link rel="stylesheet" href="../../css/style.min.css">
+  <link rel="stylesheet" href="../../css/style.css">
 
   <link rel="me" href="https://www.linkedin.com/in/lorenzo-de-lijser/" type="text/html">
   <link rel="me" href="mailto:lorenzodelijser@gmail.com">
@@ -131,13 +131,13 @@
 
       <p>Feel free to create your own playlist by clicking the button below.</p>
 
-      <a href="./app" target="_blank">
+      <a href="./app/" target="_blank">
         <div class="button-to-app button-to-default">Click Here to Create Your Own Playlist</div>
       </a>
 
       <div class="buttons">
         <a href="../../#web">Overview</a>
-        <a href="../tuneback">Next Project</a>
+        <a href="../tuneback/">Next Project</a>
       </div>
     </div>
   </div>
