--- a/projects/shadow-democracy/index.html
+++ b/projects/shadow-democracy/index.html
@@ -12,7 +12,7 @@
   <meta name="keywords"
     content="Digital, Design, Portfolio, Lorenzo de Lijser, Speculative Design, Shadow Democracy, Void, Research">
 
-  <link rel="stylesheet" href="../../css/style.min.css">
+  <link rel="stylesheet" href="../../css/style.css">
 
   <link rel="me" href="https://www.linkedin.com/in/lorenzo-de-lijser/" type="text/html">
   <link rel="me" href="mailto:lorenzodelijser@gmail.com">
