--- a/projects/tuneback/index.html
+++ b/projects/tuneback/index.html
@@ -12,7 +12,7 @@
 
   <title>Lorenzo de Lijser | Tuneback</title>
 
-  <link rel="stylesheet" href="../../css/style.min.css">
+  <link rel="stylesheet" href="../../css/style.css">
 
   <link rel="me" href="https://www.linkedin.com/in/lorenzo-de-lijser/" type="text/html">
   <link rel="me" href="mailto:lorenzodelijser@gmail.com">
@@ -129,7 +129,7 @@
 
       <p>Feel free to visit the project by clicking the button below.</p>
 
-      <a href="./app" target="_blank">
+      <a href="./app/" target="_blank">
         <div class="button-to-app button-void">Click Here to Enter Tuneback</div>
       </a>
 
