Tuneback link fix part 2

--- a/projects/tuneback/index.html
+++ b/projects/tuneback/index.html
@@ -129,7 +129,7 @@
 
       <p>Feel free to visit the project by clicking the button below.</p>
 
-      <a href="../tuneback/app/" target="_blank">
+      <a href="./tuneback/app/" target="_blank">
         <div class="button-to-app button-void">Click Here to Enter Tuneback</div>
       </a>
 
