Project link fixes

--- a/projects/foodloose/index.html
+++ b/projects/foodloose/index.html
@@ -131,7 +131,7 @@
 
       <p>Feel free to create your own playlist by clicking the button below.</p>
 
-      <a href="./app/" target="_blank">
+      <a href="./foodloose/app/" target="_blank">
         <div class="button-to-app button-to-default">Click Here to Create Your Own Playlist</div>
       </a>
 
