--- a/projects/shadow-democracy/index.html
+++ b/projects/shadow-democracy/index.html
@@ -142,7 +142,7 @@
         the <i>flow</i> of their users and create their own network. A network able to access and control all social
         data.</p>
 
-      <a href="./app" target="_blank">
+      <a href="./shadow-democracy/app" target="_blank">
         <div class="button-to-app button-void">Click Here to Cast Your Own Vote</div>
       </a>
 
