Fix linking projects

--- a/projects/foodloose/index.html
+++ b/projects/foodloose/index.html
@@ -137,7 +137,7 @@
 
       <div class="buttons">
         <a href="../../#web">Overview</a>
-        <a href="../tuneback/">Next Project</a>
+        <a href="../projects/tuneback/">Next Project</a>
       </div>
     </div>
   </div>
