--- a/projects/research-stress/index.html
+++ b/projects/research-stress/index.html
@@ -144,7 +144,7 @@
 
       <div class="buttons">
         <a href="../../#web">Overview</a>
-        <a href="../research-shame">Next project</a>
+        <a href="../projects/research-shame">Next project</a>
       </div>
     </div>
   </div>
