--- a/projects/shadow-democracy/index.html
+++ b/projects/shadow-democracy/index.html
@@ -148,7 +148,7 @@
 
       <div class="buttons void-invert">
         <a href="../../#web">Overview</a>
-        <a href="../foodloose">Next project</a>
+        <a href="../projects/foodloose">Next project</a>
       </div>
     </div>
   </div>
