--- a/projects/tuneback/index.html
+++ b/projects/tuneback/index.html
@@ -135,7 +135,7 @@
 
       <div class="buttons void-invert">
         <a href="../../#web">Overview</a>
-        <a href="../projects/research-stress">Next project</a>
+        <a href="../research-stress">Next project</a>
       </div>
     </div>
   </div>
