Shadow Democrarcy link fixes

--- a/projects/shadow-democracy/app/index.html
+++ b/projects/shadow-democracy/app/index.html
@@ -6,9 +6,9 @@
     <meta name="description" content="#">
     <meta name="keywords" content="#">
 
-    <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/style-index.css">
-    <link rel="icon" href="images/fb-logo.png" type="image/gif" sizes="16x16">
+    <link rel="stylesheet" href="../shadow-democracy/app/styles/normalize.css">
+    <link rel="stylesheet" href="../shadow-democracy/app/styles/style-index.css">
+    <link rel="icon" href="../shadow-democracy/app/images/fb-logo.png" type="image/gif" sizes="16x16">
 
     <title>Stemmen via Facebook</title>
   </head>
@@ -34,9 +34,8 @@
           <div class="input-title">Wachtwoord</div>
           <input type="password" name="wachtwoord"  placeholder="">
           <div class="account-vergeten"><a class="account-vergeten" href="#">Account vergeten?</a></div>
-          <a href="stem.html"><button type="button" name="button" onclick="politiekePartij()" >Stemmen</button></a>
+          <a href="../shadow-democracy/app/stem.html"><button type="button" name="button" onclick="politiekePartij()" >Stemmen</button></a>
         </div>
-
       </div>
     </div>
 
